--- a/javascript/index.html
+++ b/javascript/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-    <script src="array-api.js"></script>
+    <script src="json.js"></script>
   </head>
   <body></body>
 </html>
